<resources>
    <string name="app_name">Barber</string>
    <string name="login">Login</string>
    <string name="kerja_kerja_kerja">Mulai Bekerja Dengan Semangat</string>
    <string name="nomor_hp">Nomor hp</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_nclick_to_register">Don\'t have an Account?\nClick to Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>