<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Putih"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="54dp"
        android:text="@string/login"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/Birutua" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="-3dp"
        android:text="@string/kerja_kerja_kerja"
        android:textSize="14dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/Birutua" />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/Putih"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                app:endIconMode="none"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeWidth="0dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_no_hp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="14"
                    android:background="@drawable/edittext_background"
                    android:inputType="number"
                    android:hint="@string/nomor_hp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
            <!--        app:boxStrokeColor="@null"-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:endIconMode="password_toggle"
                android:layout_marginTop="23dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconTint="@color/colorPrimary"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:background="@drawable/edittext_background"
                    android:layout_height="wrap_content"
                    android:maxLength="7"
                    android:inputType="number"
                    android:hint="@string/password"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:lineSpacingExtra="7dp"
            android:text="@string/don_t_have_an_account_nclick_to_register"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/Abukurang" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="306.9dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="57dp"
        android:layout_marginBottom="118dp"
        android:background="@drawable/btnbackground"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/Putih"
        android:textSize="18dp" />

    <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:textSize="10sp"
            android:layout_height="wrap_content"/>

</RelativeLayout>